# dbus-network-manager-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
actions/: SettingsAction.cpp  SettingsAction.hpp  SettingsConnectionAction.cpp  SettingsConnectionAction.hpp
interfaces/: SettingsConnectionInterface.hpp  SettingsInterface.hpp
